feat: add support for moirai model and update entrypoint configuration (#34078)
* feat: add support for moirai model and update entrypoint configuration

* fix(docker): parameterize architecture in Dockerfile

* fix(docker): update base image to python:3.10-slim-trixie for all builders

* feat(entrypoint): include 'moirai' model in the startup script

* feat(docker): enhance venv4-builder to conditionally install torch and tensorflow packages

* fix(docker): correct image name format in DockerfileTDgpt and update entrypoint script logic

* fix(docker): remove unnecessary blank line and correct command syntax in venv4-builder

* fix(docker): correct syntax in venv4-builder for conditional installation of packages

* fix(docker): remove redundant TORCH_INDEX assignment in venv_moirai setup

* fix(docker): add TORCH_INDEX assignment for venv_moirai setup

* fix(docker): update base image reference in DockerfileTDgpt

* fix(docker): update image reference and improve package installation logging in DockerfileTDgpt

* fix(emphasis): ensure space after closing emphasis markers when followed by punctuation

--- a/packaging/docker/DockerfileTDgpt
+++ b/packaging/docker/DockerfileTDgpt
@@ -1,4 +1,5 @@
-FROM tdgpt_env:1.1 AS tdgpt
+ARG ARCH=amd64
+FROM tdengine/tdgpt-env-${ARCH}:1.1 AS tdgpt
 
 ARG pkgFile
 ARG modelDlUrl
@@ -27,3 +28,5 @@ COPY ${modelDlUrl}/timemoe/* \
     /var/lib/taos/taosanode/model/timemoe/
 COPY --link ${modelDlUrl}/moment/* \
     /var/lib/taos/taosanode/model/moment/
+COPY --link ${modelDlUrl}/moirai-small/* \
+    /var/lib/taos/taosanode/model/moirai/
