--- a/packaging/docker/DockerfileTDgpt.base
+++ b/packaging/docker/DockerfileTDgpt.base
@@ -1,16 +1,28 @@
-# docker build -f DockerfileTDgpt.base -t tdgpt_env:1.1 .
-FROM python:3.10-slim AS base-builder
+# tdengine/tdgpt-env-amd64:1.1
+ARG ARCH=amd64
 
+FROM python:3.10-slim-trixie AS base-builder
+ARG ARCH=amd64
 RUN apt-get -o Acquire::Check-Valid-Until=false -o Acquire::Check-Date=false update -y && \
     apt-get install -y --no-install-recommends gcc libc-dev procps && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install --upgrade pip && \
+RUN if [ "$ARCH" = "arm64" ]; then \
+        TORCH_PKG="torch"; \
+        TORCH_INDEX="https://download.pytorch.org/whl/cpu"; \
+        TENSORFLOW_PKG="tensorflow"; \
+    else \
+        TORCH_PKG="torch==2.3.1+cpu"; \
+        TORCH_INDEX="https://download.pytorch.org/whl/cpu"; \
+        TENSORFLOW_PKG="tensorflow-cpu==2.15.0"; \
+    fi && \
+    echo "arch=$ARCH, pkg1=${TORCH_PKG}, pkg2=${TENSORFLOW_PKG}" && \
+    pip3 install --upgrade pip && \
     pip3 install --no-cache-dir --ignore-installed blinker && \
-    pip3 install --no-cache-dir torch==2.3.1+cpu --index-url https://download.pytorch.org/whl/cpu && \
-    # arm64 use: pip3 install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu && \
+    pip3 install --no-cache-dir $TORCH_PKG --index-url $TORCH_INDEX && \
     pip3 install --no-cache-dir \
+                    $TENSORFLOW_PKG \
                     numpy==1.26.4 \
                     pandas==1.5.0 \
                     scikit-learn==1.7.0 \
@@ -23,8 +35,6 @@ RUN pip3 install --upgrade pip && \
                     taospy \
                     uwsgi==2.0.30 \
                     accelerate==1.8.1 \
-                    tensorflow-cpu==2.15.0 \
-                    # arm64 use: tensorflow==2.15.0 \
                     prophet==1.1.7 \
                     fastdtw==0.3.4 \
                     -i https://pypi.tuna.tsinghua.edu.cn/simple && \
@@ -32,7 +42,7 @@ RUN pip3 install --upgrade pip && \
     find /usr/local/lib/python3.10 -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true && \
     find /usr/local/lib/python3.10 -type d -name 'tests' -exec rm -rf {} + 2>/dev/null || true
 
-FROM python:3.10-slim AS venv1-builder
+FROM python:3.10-slim-trixie AS venv1-builder
 COPY --from=base-builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
 COPY --from=base-builder /usr/local/bin /usr/local/bin
 ENV VIRTUAL_ENV=/var/lib/taos/taosanode/venv
@@ -43,7 +53,7 @@ RUN python3.10 -m venv --system-site-packages $VIRTUAL_ENV && \
     find $VIRTUAL_ENV -type d -name '__pycache__' -exec rm -rf {} + && \
     find $VIRTUAL_ENV -type d -name 'tests' -exec rm -rf {} +
 
-FROM python:3.10-slim AS venv2-builder
+FROM python:3.10-slim-trixie AS venv2-builder
 COPY --from=base-builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
 COPY --from=base-builder /usr/local/bin /usr/local/bin
 ENV VIRTUAL_ENV=/var/lib/taos/taosanode/venv_chronos
@@ -55,7 +65,7 @@ RUN python -m venv --system-site-packages $VIRTUAL_ENV && \
     find $VIRTUAL_ENV -type d -name '__pycache__' -exec rm -rf {} + && \
     find $VIRTUAL_ENV -type d -name 'tests' -exec rm -rf {} +
 
-FROM python:3.10-slim AS venv3-builder
+FROM python:3.10-slim-trixie AS venv3-builder
 COPY --from=base-builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
 COPY --from=base-builder /usr/local/bin /usr/local/bin
 ENV VIRTUAL_ENV=/var/lib/taos/taosanode/venv_timesfm
@@ -66,7 +76,27 @@ RUN python -m venv --system-site-packages $VIRTUAL_ENV && \
     find $VIRTUAL_ENV -type d -name '__pycache__' -exec rm -rf {} + && \
     find $VIRTUAL_ENV -type d -name 'tests' -exec rm -rf {} +
 
-FROM python:3.10-slim
+
+FROM python:3.10-slim-trixie AS venv4-builder
+ARG ARCH=amd64
+COPY --from=base-builder /usr/local/bin /usr/local/bin
+ENV VIRTUAL_ENV=/var/lib/taos/taosanode/venv_moirai
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+RUN if [ "$ARCH" = "arm64" ]; then \
+        TORCH_PKG="torch"; \
+        TORCH_INDEX="https://download.pytorch.org/whl/cpu"; \
+    else \
+        TORCH_PKG="torch==2.3.1+cpu"; \
+        TORCH_INDEX="https://download.pytorch.org/whl/cpu"; \
+    fi && \
+    python -m venv --system-site-packages $VIRTUAL_ENV && \
+    pip3 install --no-cache-dir $TORCH_PKG --index-url $TORCH_INDEX && \
+    pip install --no-cache-dir uni2ts flask \
+        -i https://pypi.tuna.tsinghua.edu.cn/simple && \
+    find $VIRTUAL_ENV -type d -name '__pycache__' -exec rm -rf {} + && \
+    find $VIRTUAL_ENV -type d -name 'tests' -exec rm -rf {} +
+
+FROM python:3.10-slim-trixie
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends procps && \
     apt-get clean && \
@@ -76,3 +106,4 @@ COPY --from=base-builder /usr/local/bin /usr/local/bin
 COPY --from=venv1-builder /var/lib/taos/taosanode/venv /var/lib/taos/taosanode/venv
 COPY --from=venv2-builder /var/lib/taos/taosanode/venv_chronos /var/lib/taos/taosanode/venv_chronos
 COPY --from=venv3-builder /var/lib/taos/taosanode/venv_timesfm /var/lib/taos/taosanode/venv_timesfm
+COPY --from=venv4-builder /var/lib/taos/taosanode/venv_moirai /var/lib/taos/taosanode/venv_moirai
