--- a/tools/tsbs-tdengine/resource/config/cases.yaml
+++ b/tools/tsbs-tdengine/resource/config/cases.yaml
@@ -6,7 +6,7 @@ testCases:
         create stream db1.stm_a1 
                 sliding(1h) 
                 from db1.readings 
-                stream_options(fill_history_first) 
+                stream_options(IGNORE_DISORDER) 
                 into db1.res_a1 
                 as select _tcurrent_ts ts, avg(fuel_consumption)
                         from db1.readings 
@@ -19,14 +19,16 @@ testCases:
         create stream db1.stm_a2 
                sliding(1m) 
                from db1.readings 
-               stream_options(fill_history_first) 
+               stream_options(IGNORE_DISORDER) 
                into db1.res_a2 
                as 
                   select _tcurrent_ts ts, count(*), avg(fuel_consumption) 
                       from (  
-                            select fuel_consumption, last(grade) cur_grade 
-                            from db1.readings 
-                            where _c0 >= _tprev_ts and _c0 <= _tcurrent_ts partition by tbname) 
+                              select fuel_consumption, last(grade) cur_grade 
+                                 from db1.readings 
+                                 where _c0 >= _tprev_ts and _c0 <= _tcurrent_ts 
+                                 partition by tbname
+                            ) 
                       where cur_grade > 70;
 
     - scenarioId: "A3"
@@ -36,15 +38,15 @@ testCases:
         create stream db1.stm_a3 
             sliding(1m) 
             from db1.readings 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_a3 
             as 
               select _tcurrent_ts cur_ts, count(*), avg(avg_fuel) 
                   from (
-                        select last(elevation) last_elev, avg(fuel_consumption) avg_fuel 
-                        from db1.readings 
-                          where _c0 >= _tprev_ts and _c0 < _tcurrent_ts 
-                          partition by tbname 
+                          select last(elevation) last_elev, avg(fuel_consumption) avg_fuel 
+                             from db1.readings 
+                             where _c0 >= _tprev_ts and _c0 < _tcurrent_ts 
+                             partition by tbname 
                       ) 
                   where last_elev > 1000;
 
@@ -52,11 +54,11 @@ testCases:
       classif: "Summary"
       description: ""
       sql: |
-        create stream db1.stm_a4 
+        create stream db2.stm_a4 
             sliding(10m) 
-            from db1.readings 
-            stream_options(fill_history_first) 
-            into db1.res_a4 
+            from db2.diagnostics
+            stream_options(IGNORE_DISORDER) 
+            into db2.res_a4 
             as 
               select _tcurrent_ts, sum(load) 
                 from (
@@ -73,7 +75,7 @@ testCases:
         create stream db1.stm_a5 
             sliding(10m) 
             from db1.readings 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_a5 (ts, last_heading primary key, num) 
             as 
               select _tcurrent_ts, last_heading, count(*) 
@@ -95,7 +97,7 @@ testCases:
         create stream db1.stm_a6 
             sliding(1h) 
             from db1.readings 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_a6 
             as 
               select _tcurrent_ts, count(*), avg(last_velocity) 
@@ -117,10 +119,10 @@ testCases:
       description: ""
       sql: |
         create stream db1.stm_a7
-            interval(1d) 
-            sliding(1d) 
+            interval(1h)
+            sliding(1h) 
             from db1.readings 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_a7 
             as 
               select _twstart, avg(fuel_consumption) 
@@ -132,10 +134,10 @@ testCases:
       description: ""
       sql: |
         create stream db2.stm_a8
-            interval(1d) 
-            sliding(1d) 
+            interval(1h) 
+            sliding(1h) 
             from db2.diagnostics 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db2.res_a8 
             as 
               select _twstart, sum(tduration)/3600000 
@@ -152,10 +154,10 @@ testCases:
       description: ""
       sql: |
         create stream db2.stm_a9 
-            interval(1d) 
-            sliding(1d) 
+            interval(1h) 
+            sliding(1h) 
             from db2.diagnostics 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db2.res_a9
             as 
               select _twstart, count(*) 
@@ -170,7 +172,7 @@ testCases:
                             ) 
                        partition by name
                      ) 
-                where sduration > 12 * 3600000; 
+                where sduration > 12 * 60000; 
 
     - scenarioId: "F1"
       classif: "Fleet"
@@ -199,7 +201,7 @@ testCases:
             from db2.diagnostics partition by fleet 
             into db2.res_f2 
             as 
-              select cast(_tlocaltime/1000000 as timestamp), count(*) 
+              select cast(_tlocaltime/1000000 as timestamp) tlocaltime, count(*) cnt
                 from (
                       select last(status) last_status, fleet 
                         from db2.diagnostics 
@@ -215,37 +217,40 @@ testCases:
         create stream db1.stm_f3 
         interval(1h) 
         sliding(1h) 
-        from db1.readings partition by fleet 
-        stream_options(fill_history_first) 
+        from db1.readings 
+        partition by fleet 
+        stream_options(IGNORE_DISORDER) 
         into db1.res_f3 
         as 
           select _twend, avg(fuel_consumption) 
             from db1.readings 
-            where fleet = %%1 and _c0 >= _twstart and _c0 < _twend;
+            where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _twstart and _c0 < _twend;
 
     - scenarioId: "F4"
       classif: "Fleet"
       description: ""
       sql: |
-         create stream db1.stm_f4 
-         interval(1d) 
-         sliding(1d) 
-         from db1.readings  
-         stream_options(fill_history_first) 
-         into db1.res_f4 (ts, fleet primary key, efficiency) 
-         as 
-          select _twstart, a.fleet, avg_load/avg_fuel efficiency 
-            from (
-                  select _twstart ts, avg(fuel_consumption) avg_fuel, fleet 
-                    from db1.readings 
-                    where _c0 >= _twstart and _c0 < _twend partition by fleet
-                  ) a 
-            join (
-                  select _twstart ts, avg(current_load) avg_load, fleet 
-                    from db2.diagnostics where _c0 >= _twstart and _c0 < _twend 
-                    partition by fleet
-                  ) b 
-            on a.ts = b.ts and a.fleet = b.fleet;
+          create stream db1.stm_f4 
+          interval(1h) 
+          sliding(1h) 
+          from db1.readings 
+          partition by fleet 
+          stream_options(fill_history_first) 
+          into db1.res_f4 
+          as 
+              select _twstart ts, avg_load/avg_fuel efficiency 
+              from (
+                      select _twstart ts, avg(fuel_consumption) avg_fuel 
+                        from db1.readings 
+                        where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _twstart and _c0 < _twend
+                    ) a         
+              join 
+                    (
+                      select _twstart ts, avg(current_load) avg_load 
+                          from db2.diagnostics 
+                          where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _twstart and _c0 < _twend
+                    ) b 
+              on a.ts = b.ts;
 
 
     - scenarioId: "F5"
@@ -253,18 +258,18 @@ testCases:
       description: ""
       sql: |
         create stream db2.stm_f5 
-        interval(1d) 
-        sliding(1d) 
+        interval(1h) 
+        sliding(1h) 
         from db2.diagnostics 
         partition by fleet 
-        stream_options(fill_history_first) 
+        stream_options(IGNORE_DISORDER) 
         into db2.res_f5 
         as 
           select _twstart, sum(tduration)/3600000 
           from (
                 select _wduration tduration, count(*) 
                   from db2.diagnostics 
-                  where fleet = %%1 and _c0 >= _twstart and _c0 < _twend 
+                  where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _twstart and _c0 < _twend 
                   partition by tbname 
                   event_window start with status > 0 end with status = 0
                )
@@ -276,14 +281,14 @@ testCases:
         create stream db2.stm_f6 
             sliding(1h) 
             from db2.diagnostics partition by fleet 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db2.res_f6 
             as 
               select _tcurrent_ts, sum(cur_load)/sum(load_capacity) 
                 from (
                         select fleet, last(current_load) cur_load, load_capacity 
                         from db2.diagnostics 
-                          where fleet = %%1 and _c0 >= _tprev_ts and _c0 <= _tcurrent_ts 
+                          where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _tprev_ts and _c0 <= _tcurrent_ts 
                           partition by tbname 
                       )
 
@@ -294,14 +299,14 @@ testCases:
         create stream db2.stm_f7 
             sliding(1h) 
             from db2.diagnostics partition by fleet 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db2.res_f7 
             as 
               select _tcurrent_ts, sum(breakdown)/count(*) 
                 from (
                        select fleet, case when last(status) > 0 then 1 else 0 end breakdown 
                        from db2.diagnostics 
-                          where fleet = %%1 and _c0 >= _tprev_ts and _c0 <= _tcurrent_ts 
+                          where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _tprev_ts and _c0 <= _tcurrent_ts 
                           partition by tbname
                      )
 
@@ -310,16 +315,16 @@ testCases:
       description: ""
       sql: |
         create stream db1.stm_f8 
-        interval(1d) 
-        sliding(1d) 
+        interval(1h) 
+        sliding(1h) 
         from db1.readings partition by fleet 
-        stream_options(fill_history_first) 
+        stream_options(IGNORE_DISORDER) 
         into db1.res_f8 (ts, name primary key, top_fuel) 
         as 
           select _twstart ts, name, top(avg_fuel, 5) top_fuel 
             from (
                   select name, fleet, avg(fuel_consumption) avg_fuel 
-                    from db1.readings where fleet = %%1 and _c0 >= _twstart and _c0 < _twend 
+                    from db1.readings where (fleet = %%1 or (fleet is null and %%1 is null)) and _c0 >= _twstart and _c0 < _twend 
                     partition by tbname
                  )
 
@@ -331,7 +336,7 @@ testCases:
             interval(1h) 
             sliding(1h) 
             from db1.readings partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_t1 
             as 
               select _twstart ts, avg(fuel_consumption) avg_fuel 
@@ -346,7 +351,7 @@ testCases:
             interval(1h) 
             sliding(1h) 
             from db1.readings partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_t2 
             as 
               select _twstart ts, sum(stime) stop_time 
@@ -367,7 +372,7 @@ testCases:
                      when grade <= 70 then 1 
                      else 2 end ) 
             from db1.readings partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_t3 
             as 
               select _twstart ts, avg(fuel_consumption), avg(velocity) 
@@ -386,7 +391,7 @@ testCases:
                         ) 
             from db1.readings 
             partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_t4 
             as 
               select _twstart ts, avg(fuel_consumption) 
@@ -403,7 +408,7 @@ testCases:
                         else 0 end
                       ) 
           from db2.diagnostics partition by tbname 
-          stream_options(fill_history_first) 
+          stream_options(IGNORE_DISORDER) 
           into db2.res_t5 
           as 
             select _twstart, _twduration, avg(current_load) 
@@ -420,7 +425,7 @@ testCases:
                           then 1 else 0 end
                          ) 
             from db2.diagnostics partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db2.res_t6 
             as 
                select  _twstart, _twduration, count(*) 
@@ -437,7 +442,7 @@ testCases:
                           else 0 end
                         ) 
             from db1.readings partition by tbname, name 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_t7 
             as 
               select a.ts, a.wduration, a.avg_velocity, a.avg_grade, a.avg_elevation, b.avg_load 
@@ -463,7 +468,7 @@ testCases:
                          end   with velocity <= 70 or grade <= 70
                         ) 
             from db1.readings partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db1.res_t8 
             as 
               select _twstart, _twduration, avg(fuel_consumption) 
@@ -480,7 +485,7 @@ testCases:
                           else 0 end 
                         ) 
             from db2.diagnostics partition by tbname 
-            stream_options(fill_history_first) 
+            stream_options(IGNORE_DISORDER) 
             into db2.res_t9 
             as 
               select _twstart, first(current_load) 
@@ -723,7 +728,7 @@ testCases:
         ) 
         from metron_dmp.alarm 
         partition by tbname, line, workshop, factory 
-        STREAM_OPTIONS(EVENT_TYPE(WINDOW_OPEN))  
+        STREAM_OPTIONS(IGNORE_DISORDER|EVENT_TYPE(WINDOW_OPEN))  
         into metron_dmp.result_alarm 
         output_subtable(concat_ws('_', 'stream', tbname, line, workshop, factory))
         TAGS(line varchar(20) as line, workshop varchar(20) as workshop, factory varchar(20) as factory)  
