--- a/source/dnode/mnode/impl/CMakeLists.txt
+++ b/source/dnode/mnode/impl/CMakeLists.txt
@@ -27,9 +27,13 @@ endif()
 add_library(mnode STATIC ${MNODE_SRC})
 target_include_directories(
   mnode
-  PUBLIC "${TD_SOURCE_DIR}/include/dnode/mnode"
+  PUBLIC 
+  "${TD_SOURCE_DIR}/include/dnode/mnode"
+  "${TD_SOURCE_DIR}/include/dnode/mgmt"
+  "${TD_SOURCE_DIR}/include/dnode/xnode"
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
   PUBLIC "${TD_SOURCE_DIR}/source/libs/totp/inc"
+  "${TD_SOURCE_DIR}/include/libs/txnode/inc"
   PRIVATE "${TD_ENTERPRISE_DIR}/src/plugins/privilege/inc"
 )
 
@@ -40,7 +44,7 @@ if(TD_ENTERPRISE)
   )
 endif()
 target_link_libraries(
-  mnode scheduler sdb wal transport sync monitor executor qworker new-stream parser audit monitorfw totp
+  mnode scheduler sdb wal transport sync monitor executor qworker new-stream parser audit monitorfw totp xnode txnode
 )
 
 if(DEFINED GRANT_CFG_INCLUDE_DIR)
