--- a/.github/workflows/tdengine-build.yml
+++ b/.github/workflows/tdengine-build.yml
@@ -155,7 +155,7 @@ jobs:
         name: Build externals on Linux and macOS
         continue-on-error: false
         run: |
-          ./build.sh gen
+          ./build.sh gen -DTAOSADAPTER_GIT_TAG:STRING=3.3.8
           ./build.sh bld --target build_externals 
 
       - if: ${{ steps.cache-ext.outputs.cache-hit != 'true' && runner.os == 'Windows' }}
@@ -166,13 +166,13 @@ jobs:
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           set CL=/MP8
           set TD_CONFIG=Release
-          call .\build.bat gen -G "NMake Makefiles JOM"
+          call .\build.bat gen -G "NMake Makefiles JOM"  -DTAOSADAPTER_GIT_TAG:STRING=3.3.8
           call .\build.bat bld --target build_externals 
 
       - name: Build TDengine on Linux and macOS
         if: runner.os != 'Windows'
         run: |
-          ./build.sh gen -DTD_EXTERNALS_USE_ONLY:BOOL=ON
+          ./build.sh gen -DTD_EXTERNALS_USE_ONLY:BOOL=ON -DTAOSADAPTER_GIT_TAG:STRING=3.3.8
           ./build.sh bld 
           ./build.sh install
           which taosd
@@ -189,7 +189,7 @@ jobs:
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           set CL=/MP8
           set TD_CONFIG=Release
-          call .\build.bat gen -DTD_EXTERNALS_USE_ONLY:BOOL=ON -G "NMake Makefiles JOM"
+          call .\build.bat gen -DTD_EXTERNALS_USE_ONLY:BOOL=ON -G "NMake Makefiles JOM" -DTAOSADAPTER_GIT_TAG:STRING=3.3.8
           call .\build.bat bld 
           call .\build.bat install
           echo %PATH%
