enh(client): refactor logic of slow log

--- a/source/client/test/CMakeLists.txt
+++ b/source/client/test/CMakeLists.txt
@@ -33,11 +33,12 @@ TARGET_LINK_LIBRARIES(
         PUBLIC os util common transport parser catalog scheduler function ${TAOS_NATIVE_LIB_STATIC} qcom geometry
 )
 
-#ADD_EXECUTABLE(clientMonitorTest clientMonitorTests.cpp)
-#TARGET_LINK_LIBRARIES(
-#        clientMonitorTest
-#        PUBLIC os util common transport monitor parser catalog scheduler function gtest ${TAOS_NATIVE_LIB_STATIC} qcom executor
-#)
+ADD_EXECUTABLE(clientMonitorTest clientMonitorTests.cpp)
+DEP_ext_gtest(clientMonitorTest)
+TARGET_LINK_LIBRARIES(
+       clientMonitorTest
+       PUBLIC os util common transport monitor parser catalog scheduler function ${TAOS_NATIVE_LIB_STATIC} qcom executor
+)
 
 ADD_EXECUTABLE(userOperTest ../../../tests/script/api/passwdTest.c)
 if (TD_WINDOWS)
@@ -126,11 +127,11 @@ TARGET_INCLUDE_DIRECTORIES(
         PRIVATE "${TD_SOURCE_DIR}/source/client/inc"
 )
 
-#TARGET_INCLUDE_DIRECTORIES(
-#        clientMonitorTest
-#        PUBLIC "${TD_SOURCE_DIR}/include/client/"
-#        PRIVATE "${TD_SOURCE_DIR}/source/client/inc"
-#)
+TARGET_INCLUDE_DIRECTORIES(
+       clientMonitorTest
+       PUBLIC "${TD_SOURCE_DIR}/include/client/"
+       PRIVATE "${TD_SOURCE_DIR}/source/client/inc"
+)
 
 TARGET_INCLUDE_DIRECTORIES(
         stmt2Test
